* Heutigen Geburtstage werden oben mit angezeigt

--- a/allmemberlist.html
+++ b/allmemberlist.html
@@ -27,6 +27,7 @@
     <h1>
         Members
     </h1>
+    <p id="birthdays"></p>
     <table id="tableMembersGroupsAndBirthdays">
         <thead>
             <tr>
