* Liste auf Solos reduziert * Guess the member by picture angefangen

--- a/allmemberlist.html
+++ b/allmemberlist.html
@@ -27,6 +27,7 @@
     <h1>
         Members
     </h1>
+    <button onclick="window.location.href = 'pictureToMember.html';">Guess the member by picture</button><br>
     <p id="birthdays"></p>
     <table id="tableMembersGroupsAndBirthdays">
         <thead>
