* Button Submit wurde hinzugefügt

--- a/pictureToMember.html
+++ b/pictureToMember.html
@@ -13,6 +13,8 @@
     <br>
     <br>
     <input type="text" id="answer" placeholder="memberName">
+    <button onclick="checkAnswer()">Submit</button><br><br>
+
     <br>
     <p id="result"></p>
 
