* Button um zur Liste zu kommen wurde hinzugefügt

--- a/allmemberlist.html
+++ b/allmemberlist.html
@@ -45,6 +45,7 @@
     <script src="memberlist.js"></script>
     <script src="allmemberlist.js"></script>
     
+    <!--gucken, wie man das mit den Ex-Membern regelt-->
 
 </body>
 </html>
