--- a/pictureToMember.html
+++ b/pictureToMember.html
@@ -12,11 +12,13 @@
     <img src="" id="memberPicture" alt="picture.png" height="150px" width="100px">
     <br>
     <br>
+    <p id="result"></p>
+    <br>
     <input type="text" id="answer" placeholder="memberName">
     <button onclick="checkAnswer()">Submit</button><br><br>
 
-    <br>
-    <p id="result"></p>
+
+    <button onclick="window.location.href = 'pictureToMember.html';">Back to birthdaylist</button><br>
 
     <script src="memberlist.js"></script>
     <script src="pictureToMember.js"></script>
