* KoL was added

--- a/pictureToMember.html
+++ b/pictureToMember.html
@@ -18,7 +18,7 @@
     <button onclick="checkAnswer()">Submit</button><br><br>
 
 
-    <button onclick="window.location.href = 'pictureToMember.html';">Back to birthdaylist</button><br>
+    <button onclick="window.location.href = 'allmemberlist.html';">Back to birthdaylist</button><br>
 
     <script src="memberlist.js"></script>
     <script src="pictureToMember.js"></script>
