* Behandlung aller Gruppennamen hinzugefügt * Counter für die Liste hinzugefügt

--- a/allmemberlist.html
+++ b/allmemberlist.html
@@ -29,6 +29,7 @@
     </h1>
     <button onclick="window.location.href = 'pictureToMember.html';">Guess the member by picture</button><br>
     <p id="birthdays"></p>
+    <p id="counter"></p>
     <table id="tableMembersGroupsAndBirthdays">
         <thead>
             <tr>
@@ -44,8 +45,6 @@
 
     <script src="memberlist.js"></script>
     <script src="allmemberlist.js"></script>
-    
-    <!--gucken, wie man das mit den Ex-Membern regelt-->
 
 </body>
 </html>
