--- a/pictureToMember.html
+++ b/pictureToMember.html
@@ -6,10 +6,13 @@
     <title>Picture to member</title>
 </head>
 <body>
+    <header>
+        <p>Last edited: 01:28</p>
+    </header>
     <h1>
         Guess the member by picture
     </h1>
-    <img src="" id="memberPicture" alt="picture.png" height="150px" width="100px">
+    <img src="" id="memberPicture" alt="picture.png" height="200px" width="150px">
     <br>
     <br>
     <p id="result"></p>
