* Fehler beim Setzen der Source von Solos behoben

--- a/pictureToMember.html
+++ b/pictureToMember.html
@@ -15,7 +15,7 @@
     <p id="result"></p>
     <br>
     <input type="text" id="answer" placeholder="memberName">
-    <button onclick="checkAnswer()">Submit</button><br><br>
+    <button onclick="checkAnswer()">Submit</button> <button onclick="">Help (no function RN)</button><br><br>
 
 
     <button onclick="window.location.href = 'allmemberlist.html';">Back to birthdaylist</button><br>
