--- a/allmemberlist.html
+++ b/allmemberlist.html
@@ -14,12 +14,18 @@
             max-width: 250px;
             border: 1px solid black;
         }
+        tr:nth-child(odd) {
+            background-color: rgb(214, 214, 214);
+        }
         th {
             background-color: rgba(0, 0, 0, 0.25);
             color: black;
         }
         td {
             border-left: 1px solid black;
+        }
+        button {
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -31,6 +37,7 @@
         Members
     </h1>
     <button onclick="window.location.href = 'pictureToMember.html';">Guess the member by picture</button><br>
+    <button onclick="window.location.href = 'nameGroupMembers.html';">Name the group members</button><br>
     <button onclick="window.location.href = 'gallery.html';">Gallery</button><br>
     <p id="birthdays"></p>
     <p id="counter"></p>
