* Streakcounter wurde hinzugefügt

--- a/pictureToMember.html
+++ b/pictureToMember.html
@@ -17,6 +17,7 @@
     <p id="hint"></p>
     <br>
     <input type="text" id="answer" placeholder="memberName">
+    <p id="streak"></p>
     <button onclick="checkAnswer()">Submit</button> <button onclick="getHelp()">Help</button> <button onclick="skip()">Skip</button><br><br>
 
 
