* PK wurde angepasst * View angepasst * Button für Gruppen-Switch wurde hinzugefügt

--- a/pictureToMember.html
+++ b/pictureToMember.html
@@ -11,15 +11,15 @@
     </h1>
     <img src="" id="memberPicture" alt="picture.png" height="200px" width="150px">
     <br>
-    <br>
     <p id="result"></p>
     <br>
     <p id="hint"></p>
     <br>
-    <input type="text" id="answer" placeholder="memberName">
+    <input type="text" id="answer" placeholder="memberName"> <button onclick="checkAnswer()">Submit</button>
     <p id="wrongGuesses"></p>
     <p id="streak"></p>
-    <button onclick="checkAnswer()">Submit</button> <button onclick="getHelp()">Help</button> <button onclick="skip()">Skip</button><br><br>
+    <button onclick="getHelp()">Help</button> <button onclick="skip()">Skip</button><br><br>
+    <button id="groupGuesses">Group guess</button><br><br>
 
 
     <button onclick="window.location.href = 'allmemberlist.html';">Back to birthdaylist</button><br>
