* Button für Gruppenguess wurde implementiert

--- a/pictureToMember.html
+++ b/pictureToMember.html
@@ -19,7 +19,7 @@
     <p id="wrongGuesses"></p>
     <p id="streak"></p>
     <button onclick="getHelp()">Help</button> <button onclick="skip()">Skip</button><br><br>
-    <button id="groupGuesses">Group guess</button><br><br>
+    <button id="buttonGroupGuesses" onclick="setGroupToGuess()">Group guess</button><br><br>
 
 
     <button onclick="window.location.href = 'allmemberlist.html';">Back to birthdaylist</button><br>
