* onclick beim Enter group-Button hinzugefügt

--- a/nameGroupMembers.html
+++ b/nameGroupMembers.html
@@ -34,7 +34,7 @@
     <p id="question">Which group do you want to name?</p>
     <p id="counter"></p>
 
-    <input type="text" id="inputGroupMember" placeholder="group"> <button id="buttonGroupMember">Enter group</button> <button id="giveUp" onclick="giveUp()">Give up</button>
+    <input type="text" id="inputGroupMember" placeholder="group"> <button id="buttonGroupMember" onclick="checkAnswer()">Enter group</button> <button id="giveUp" onclick="giveUp()">Give up</button>
 
     <br>
     <br>
