* 3 Hinweise sind nun möglich

--- a/pictureToMember.html
+++ b/pictureToMember.html
@@ -18,7 +18,7 @@
     <input type="text" id="answer" placeholder="memberName"> <button onclick="checkAnswer()">Submit</button>
     <p id="wrongGuesses"></p>
     <p id="streak"></p>
-    <button onclick="getHelp()">Help</button> <button onclick="skip()">Skip</button><br><br>
+    <button id="buttonHelp" onclick="getHelp()">Help</button> <button onclick="skip()">Skip</button><br><br>
     <button id="buttonGroupGuesses" onclick="setGroupToGuess()">Group guess</button><br><br>
 
 
