* festes CSS hinzugefügt

--- a/allmemberlist.html
+++ b/allmemberlist.html
@@ -5,29 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>allmemberlist</title>
     <style>
-        table {
-            border-collapse: collapse;
-            table-layout: auto;
-        }
-        th, tr {
-            width: 250px;
-            max-width: 250px;
-            border: 1px solid black;
-        }
-        tr:nth-child(odd) {
-            background-color: rgb(214, 214, 214);
-        }
-        th {
-            background-color: rgba(0, 0, 0, 0.25);
-            color: black;
-        }
-        td {
-            border-left: 1px solid black;
-        }
         button {
             margin-bottom: 10px;
         }
     </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>
