--- a/nameGroupMembers.html
+++ b/nameGroupMembers.html
@@ -4,25 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Name the group members</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            table-layout: auto;
-        }
-        th, tr {
-            width: 250px;
-            max-width: 250px;
-            border: 1px solid black;
-        }
-        th {
-            background-color: rgba(0, 0, 0, 0.25);
-            color: black;
-        }
-        tr:nth-child(even) {
-            background-color: rgb(214, 214, 214);
-            border: 1px solid black;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>
