* Bilder wurden überarbeitet * WEnxy Project wurde hinzugefügt

--- a/allmemberlist.html
+++ b/allmemberlist.html
@@ -18,6 +18,7 @@
     <button onclick="window.location.href = 'pictureToMember.html';">Guess the member by picture</button><br>
     <button onclick="window.location.href = 'nameGroupMembers.html';">Name the group members</button><br>
     <button onclick="window.location.href = 'gallery.html';">Gallery</button><br>
+    <button onclick="window.location.href = 'wenxy.html';">WEnxy Project</button><br>
     <p id="birthdays"></p>
     <p id="counter"></p>
     <table id="tableMembersGroupsAndBirthdays">
