* Bild wurde angepasst

--- a/wenxy.html
+++ b/wenxy.html
@@ -24,15 +24,15 @@
 
         #title {
             background-image: url('pics/pixy/group.jpg');
-            background-repeat: no-repeat;
+            width: 100%;
+            height: 100vh;
             background-size: cover;
-            height: 300px;
+            background-position: center center;
         }
         #problems {
             background-color: rgb(1, 88, 1);
             color: rgb(193, 193, 193);
         }
-
         #problems_header {
             color: white;
         }
@@ -81,9 +81,15 @@
         </table>
     </div>
     <br>
-    <div>
-        <p>&#9993; wenxy.project@business.com</p>
-        <p>&#127760; www.wenxy_project.de</p>
-    </div>
+    <hr>
+    <footer>
+        <div>
+            <p>&#9993; wenxy.project@business.com
+            <br>
+            &#127760; www.wenxy_project.de</p>
+            <br>
+            &#169; 2024 GY Entertainment
+        </div>
+    </footer>
 </body>
 </html>
