--- a/wenxy.html
+++ b/wenxy.html
@@ -69,9 +69,9 @@
     <div id="problems">
         <table>
             <tr id="problems_header">
-                <Th>Financial problems</Th>
-                <Th>More fans...</Th>
-                <Th>...More PIXY</Th>
+                <th>Financial problems</th>
+                <th>More fans...</th>
+                <th>...More PIXY</th>
             </tr>
             <tr>
                 <td>Due to financial problems, Allart Entertainment is unable to promote PIXY enough to gain any fans</td>
@@ -81,6 +81,112 @@
         </table>
     </div>
     <br>
+    <div id="lola">
+        <table>
+            <tr>
+                <td>
+                    <img src="pics/pixy/lola.jpg" alt="lola"> 
+                </td>
+                <td>
+                    <ul>
+                        <li>Name: Lola</li>
+                        <li>Birthday: 16. July 2001</li>
+                        <li>Position: Main Rapper, Visual</li>
+                    </ul>
+                </td>
+                <td>
+                    <p>
+                        Text über Lola
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="dia">
+        <table>
+            <tr>
+                <td>
+                    <img src="pics/pixy/dia.jpg" alt="dia"> 
+                </td>
+                <td>
+                    <ul>
+                        <li>Name: Dia</li>
+                        <li>Birthday: 16. July 2001</li>
+                        <li>Position: Leader, Main Dancer, Main Vocalist, Sub Rapper</li>
+                    </ul>
+                </td>
+                <td>
+                    <p>
+                        Text über Dia
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="sua">
+        <table>
+            <tr>
+                <td>
+                    <img src="pics/pixy/sua.jpg" alt="sua"> 
+                </td>
+                <td>
+                    <ul>
+                        <li>Name: Sua</li>
+                        <li>Birthday: 24. February 2003</li>
+                        <li>Position: Sub Vocalist</li>
+                    </ul>
+                </td>
+                <td>
+                    <p>
+                        Text über Sua
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="dajeong">
+        <table>
+            <tr>
+                <td>
+                    <img src="pics/pixy/dajeong.jpg" alt="dajeong"> 
+                </td>
+                <td>
+                    <ul>
+                        <li>Name: Dajeong</li>
+                        <li>Birthday: 31. July 2003</li>
+                        <li>Position: Lead Vocalist, Visual</li>
+                    </ul>
+                </td>
+                <td>
+                    <p>
+                        Text über Dajeong
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="rinji">
+        <table>
+            <tr>
+                <td>
+                    <img src="pics/pixy/rinji.jpg" alt="rinji"> 
+                </td>
+                <td>
+                    <ul>
+                        <li>Name: Rinji</li>
+                        <li>Birthday: 05. May 2006</li>
+                        <li>Position: Lead Dancer, Lead Rapper, Sub Vocalist, Maknae</li>
+                    </ul>
+                </td>
+                <td>
+                    <p>
+                        Text über Rinji
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </div>
+
     <hr>
     <footer>
         <div>
