* Holland wurde hinzugefügt

--- a/pixy_member.html
+++ b/pixy_member.html
@@ -51,6 +51,7 @@
                 <td>
                     <ul>
                         <li>Name: Lola</li>
+                        <li>Birth Name: Choi Yujeong</li>
                         <li>Birthday: 16. July 2001</li>
                         <li>Position: Main Rapper, Visual</li>
                     </ul>
@@ -72,6 +73,7 @@
                 <td>
                     <ul>
                         <li>Name: Dia</li>
+                        <li>Birth Name: Choi Eunji</li>
                         <li>Birthday: 16. July 2001</li>
                         <li>Position: Leader, Main Dancer, Main Vocalist, Sub Rapper</li>
                     </ul>
@@ -93,6 +95,7 @@
                 <td>
                     <ul>
                         <li>Name: Sua</li>
+                        <li>Birth Name: Choi Sua</li>
                         <li>Birthday: 24. February 2003</li>
                         <li>Position: Sub Vocalist</li>
                     </ul>
@@ -114,6 +117,7 @@
                 <td>
                     <ul>
                         <li>Name: Dajeong</li>
+                        <li>Birth Name: Jung Dajeong</li>
                         <li>Birthday: 31. July 2003</li>
                         <li>Position: Lead Vocalist, Visual</li>
                     </ul>
@@ -135,6 +139,7 @@
                 <td>
                     <ul>
                         <li>Name: Rinji</li>
+                        <li>Birth Name: Hwang Rinji</li>
                         <li>Birthday: 05. May 2006</li>
                         <li>Position: Lead Dancer, Lead Rapper, Sub Vocalist, Maknae</li>
                     </ul>
