--- a/wenxy.html
+++ b/wenxy.html
@@ -32,7 +32,7 @@
         #title {
             background-image: url('pics/pixy/group.jpg');
             width: 100%;
-            height: 50vh;
+            height: 100vh;
             background-size: cover;
             background-position: center center;
         }
@@ -92,7 +92,9 @@
         </table>
     </div>
     <br>
-
+    <p>
+        Meet them at the Dokomi in Dusseldorf! <3
+    </p>
     <hr>
     <footer>
         <div>
