* Ruka was added * Upcomming birthdays month calc was fixed * Buttons were disabled

--- a/allmemberlist.html
+++ b/allmemberlist.html
@@ -17,8 +17,8 @@
     </h1>
     <button onclick="window.location.href = 'pictureToMember.html';">Guess the member by picture</button><br>
     <button onclick="window.location.href = 'nameGroupMembers.html';">Name the group members</button><br>
-    <button onclick="window.location.href = 'gallery.html';">Gallery</button><br>
-    <button onclick="window.location.href = 'wenxy.html';">WEnxy Project</button><br>
+    <button onclick="window.location.href = 'gallery.html';" style="display: none;">Gallery</button><br>
+    <button onclick="window.location.href = 'wenxy.html';" style="display: none;">WEnxy Project</button><br>
     <p id="birthdays"></p>
     <p id="counter"></p>
     <table id="tableMembersGroupsAndBirthdays">
